# convert-dicom-to-nifti-directories

./: .gitignore  Dockerfile  README.md  README_zh.md  pyproject.toml  requirements.txt
dcmsort2nii/: conversion.py  dicom_utils.py  exception.py  main.py  metadata_utils.py  nifti_utils.py  parallel.py  pipeline.py  post_processing.py
example/: example_notebook.ipynb
example/sample_docker_output/: error_log.csv  nifti_dicom_mapping.parquet
example/utils/: visuailize.py
