[project]
name = "dcmsort2nii"
version = "0.1.0"
authors = [
  { name="Yuanzhou Cai", email="cai.yz@outlook.com" },
]
description = "DICOM to NIfTI converter with parallel processing and sequence sorting."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
keywords = ["dicom", "nifti", "medical imaging", "medical image analysis", "medical image processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "pandas",
    "pydicom",
    "nibabel",
    "dicom2nifti",
    "tqdm",
    "pyarrow",
    "openpyxl",
]

[project.scripts]
dcmsort2nii = "dcmsort2nii.main:main"

[project.urls]
Homepage = "https://github.com/ca1yz/dcmsort2nii"
Repository = "https://github.com/ca1yz/dcmsort2nii"
"Bug Tracker" = "https://github.com/ca1yz/dcmsort2nii/issues"

# [tool.setuptools.packages.find]
# where = ["."]
